refactor: UnViewedCafe 셔플 로직을 Member#addUnViewedCafesWithShuffle로 캡슐화